# lakekeeper

./: .coderabbit.yaml  .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEVELOPMENT.md  LICENSE  NOTICE  README.md  USER_GUIDE.md  justfile  rustfmt.toml
crates/iceberg-catalog/: CHANGELOG.md  Cargo.toml
crates/iceberg-catalog-bin/: CHANGELOG.md  Cargo.toml
crates/iceberg-catalog-bin/src/: healthcheck.rs  main.rs  serve.rs  ui.rs  wait_for_db.rs
crates/iceberg-catalog/migrations/: 20241106201139_split_table_metadata.sql  20241117144332_task_queue_indexes.sql  20241216150545_fix_schemaless_snapshots.sql  20241224055514_unique_user_email.sql  20250108131004_statistics.sql  20250328131139_fix_sequence_number.sql  20250401163352_project_id_constraints.sql  20250407144536_fix_warehouse_deletion_fk.sql  20250409201248_cascade_delete.sql  20250410024101_fix_warehouse_stats.sql  20250412220607_restructure_endpoints.sql  20250428072447_add_task_warehouse_id_idx.sql  20250505101407_fix_index_function.sql  20250513172324_s3_sign_table_endpoint.sql
crates/iceberg-catalog/src/: config.rs  lib.rs  metrics.rs  request_metadata.rs  retry.rs  tracing.rs
crates/iceberg-catalog/src/api/: endpoints.rs  mod.rs  router.rs
crates/iceberg-catalog/src/api/iceberg/: mod.rs  types.rs
crates/iceberg-catalog/src/api/iceberg/v1/: metrics.rs  namespace.rs  s3_signer.rs  tables.rs  views.rs
crates/iceberg-catalog/src/api/management/: mod.rs
crates/iceberg-catalog/src/api/management/v1/: bootstrap.rs  namespace.rs  project.rs  role.rs  table.rs  user.rs  view.rs  warehouse.rs
crates/iceberg-catalog/src/catalog/: commit_tables.rs  compression_codec.rs  config.rs  io.rs  metrics.rs  mod.rs  namespace.rs  tables.rs  tabular.rs  views.rs
crates/iceberg-catalog/src/catalog/s3_signer/: cache.rs  sign.rs
crates/iceberg-catalog/src/catalog/views/: commit.rs  create.rs  drop.rs  exists.rs  list.rs  load.rs  protect.rs  rename.rs
crates/iceberg-catalog/src/implementations/: kv2.rs  mod.rs
crates/iceberg-catalog/src/implementations/postgres/: catalog.rs  dbutils.rs  mod.rs  namespace.rs  pagination.rs  role.rs  secrets.rs  tabular.rs  user.rs  warehouse.rs
crates/iceberg-catalog/src/implementations/postgres/endpoint_statistics/: list.rs  mod.rs  sink.rs
crates/iceberg-catalog/src/implementations/postgres/migrations/: mod.rs  split_table_metadata.rs
crates/iceberg-catalog/src/implementations/postgres/tabular/: mod.rs  table.rs  view.rs
crates/iceberg-catalog/src/implementations/postgres/task_queues/: mod.rs  tabular_expiration_queue.rs  (+1 more)
crates/iceberg-catalog/src/service/: authn.rs  catalog.rs  contract_verification.rs  endpoint_hooks.rs  endpoint_statistics.rs  event_publisher.rs  health.rs  mod.rs  secrets.rs  tabular_idents.rs  token_verification.rs
crates/iceberg-catalog/src/service/authn/: identities.rs  mod.rs
crates/iceberg-catalog/src/service/authz/: mod.rs
crates/iceberg-catalog/src/service/event_publisher/: mod.rs
crates/iceberg-catalog/src/service/storage/: az.rs  error.rs  mod.rs  s3.rs
crates/iceberg-catalog/src/service/task_queue/: mod.rs  tabular_expiration_queue.rs  tabular_purge_queue.rs
crates/iceberg-catalog/src/tests/: drop_recursive.rs  drop_warehouse.rs  endpoint_stats.rs  mod.rs  stats.rs
crates/iceberg-catalog/tests/: table_metadatas.jsonl
crates/io/: Cargo.toml
crates/io/src/: adls.rs  error.rs  gcs.rs  lib.rs  location.rs  memory.rs  s3.rs
crates/io/src/adls/: adls_error.rs  adls_location.rs  adls_storage.rs
crates/io/src/gcs/: gcs_error.rs  gcs_location.rs  gcs_storage.rs
crates/io/src/s3/: s3_error.rs  s3_location.rs  s3_storage.rs
crates/io/tests/: integration_tests.rs
crates/lakekeeper/: CHANGELOG.md  Cargo.toml
crates/lakekeeper-bin/: CHANGELOG.md  Cargo.toml
crates/lakekeeper-bin/src/: healthcheck.rs  main.rs  serve.rs  ui.rs  wait_for_db.rs
crates/lakekeeper/migrations/: 20241006083546_projects-table.sql  20241106163000_user_email_search.sql  20241216114355_table_statistics.sql  20250216105917_variant_protocols.sql  20250304100842_string_project_ids.sql  20250310181331_endpoint_stats.sql  20250326153233_table_statistics_fkey.sql  20250505101407_fix_index_function.sql  20250506094141_fix_index_function2.sql  20250523101407_tasks_store_their_state.sql  20250623114333_fix_soft_deleted_tabulars.sql  20250826171037_task_runtime_information.sql  20250904142650_reusable_table_id.sql
crates/lakekeeper/src/: config.rs  lib.rs  metrics.rs  request_metadata.rs  serve.rs  tracing.rs
crates/lakekeeper/src/api/: endpoints.rs  mod.rs  router.rs
crates/lakekeeper/src/api/iceberg/: mod.rs  types.rs
crates/lakekeeper/src/api/management/: mod.rs
crates/lakekeeper/src/catalog/: commit_tables.rs  compression_codec.rs  config.rs  io.rs  mod.rs  namespace.rs  tables.rs  tabular.rs  views.rs
crates/lakekeeper/src/catalog/s3_signer/: cache.rs  mod.rs  sign.rs
crates/lakekeeper/src/catalog/views/: commit.rs  create.rs  drop.rs  exists.rs  list.rs  load.rs  rename.rs
crates/lakekeeper/src/implementations/: kv2.rs  mod.rs
crates/lakekeeper/src/implementations/postgres/: bootstrap.rs  catalog.rs  dbutils.rs  mod.rs  namespace.rs  pagination.rs  role.rs  secrets.rs  task_queues.rs  tasks.rs  user.rs  warehouse.rs
crates/lakekeeper/src/service/: authn.rs  catalog.rs  contract_verification.rs  endpoint_hooks.rs  endpoint_statistics.rs  health.rs  mod.rs  secrets.rs  tabular_idents.rs
crates/lakekeeper/src/service/authz/: mod.rs
crates/lakekeeper/src/service/event_publisher/: mod.rs
crates/lakekeeper/src/service/storage/: az.rs  error.rs  mod.rs  s3.rs
crates/lakekeeper/src/service/task_queue/: mod.rs  tabular_expiration_queue.rs  tabular_purge_queue.rs  task_queues_runner.rs  task_registry.rs
crates/lakekeeper/src/tests/: drop_recursive.rs  drop_warehouse.rs  endpoint_stats.rs  mod.rs  soft_deletion.rs  stats.rs  tasks.rs
crates/lakekeeper/src/utils/: mod.rs  time_conversion.rs
examples/kafka-connect-iceberg-sink/producer/: README.md  main.py  producer.yaml  pyproject.toml
(+553 files in other folders)
