[workspace]
members = [
    "crates/iceberg-catalog",
    "crates/iceberg-catalog-bin",
    "crates/iceberg-ext",
]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://github.com/lakekeeper/lakekeeper"
repository = "https://github.com/lakekeeper/lakekeeper.git"
rust-version = "1.80.0"
license = "Apache-2.0"

[workspace.dependencies]
async-nats = "0.38.0"
async-compression = { version = "^0.4", features = ["tokio", "gzip"] }
azure_core = { version = "0.21.0", default-features = false, features = [
    "hmac_rust",
    "enable_reqwest_rustls",
] }
azure_storage = { version = "0.21.0", default-features = false, features = [
    "enable_reqwest_rustls",
] }
azure_storage_blobs = { version = "0.21.0", default-features = false, features = [
    "enable_reqwest_rustls",
] }
azure_identity = { version = "0.21.0", default-features = false, features = [
    "enable_reqwest_rustls",
] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-sts = "1.36.0"
aws-smithy-http = "0.60.11"
base64 = "0.22.1"
cloudevents-sdk = { version = "0.8.0" }
fxhash = "0.2.1"
google-cloud-auth = { version = "0.17.0", features = [
    "rustls-tls",
], default-features = false }
figment = { version = "0.10.19", features = ["env"] }
serde = { version = "^1.0", features = ["rc"] }
serde_derive = "^1.0"
serde_with = "^3.4"
serde_json = { version = "^1.0", features = ["raw_value"] }
url = { version = "^2.5", features = ["serde"] }
uuid = { version = "^1.6", features = ["serde", "v4", "v5", "v7"] }
reqwest = { version = "^0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
iceberg = { git = "https://github.com/lakekeeper/iceberg-rust.git", rev = "cdd17def74cff306f20b79dc2249d3ca14f818f6", features = [
    "storage-all",
] }
openfga-rs = { git = "https://github.com/c-thiel/openfga-rs.git", rev = "08cb6a4" }
typed-builder = "^0.20.0"
strum_macros = "^0.26"
axum = { version = "^0.7" }
axum-prometheus = "0.7.0"
axum-extra = { version = "0.9.3" }
axum-macros = { version = "0.4.2" }
async-trait = "^0.1"
env_logger = "^0.11"
itertools = "0.13.0"
log = "^0.4"
mockall = "0.13.0"
needs_env_var = "1.1.0"
http = "^1.1"
derive_more = { version = "^1.0.0", features = ["from"] }
flate2 = "^1.0"
lazy_static = "^1.4"
maplit = "1.0.2"
futures = "^0.3"
anyhow = "^1.0"
chrono = "^0.4"
clap = { version = "^4.5", features = ["derive", "env"] }
headers = { version = "^0.4" }
hostname = "0.4.0"
http-body-util = "^0.1"
jwks_client_rs = { version = "0.5.1", default-features = false, features = [
    "rustls-tls",
] }
kube = { version = "0.98", default-features = false, features = [
    "rustls-tls",
    "client",
] }
k8s-openapi = { version = "0.24.0", features = ["v1_28"] }
lazy-regex = { version = "3.2.0", features = ["lite"] }
percent-encoding = "2.3.1"
strum = { version = "^0.26", features = ["derive"] }
sqlx = { version = "^0.8.2", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "json",
    "migrate",
    "uuid",
    "chrono",
] }
thiserror = "2.0.0"
tokio = { version = "1.41", default-features = false, features = [
    "signal",
    "rt-multi-thread",
] }
tower = { version = "^0.5" }
tower-http = { version = "^0.6", features = [
    "catch-panic",
    "compression-full",
    "sensitive-headers",
    "timeout",
    "trace",
] }
tracing = { version = "^0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tryhard = { version = "0.5.1" }
urlencoding = "^2.1"
async-stream = "0.3.6"
utoipa = { version = "5.3.0", features = [
    "axum_extras",
    "chrono",
    "url",
    "uuid",
    "yaml",
] }
serde_yml = "0.0.12"
utoipa-swagger-ui = { version = "8.1.0", features = ["axum"] }
veil = "0.2.0"
paste = "1.0.15"
heck = "0.5.0"
time = "0.3.36"
pretty_assertions = "~1.4"
similar = "2.6.0"
assert-json-diff = "2.0.2"
