[workspace]
members = [
    "crates/iceberg-ext",
    "crates/io",
    "crates/lakekeeper",
    "crates/lakekeeper-bin",
]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://github.com/lakekeeper/lakekeeper"
repository = "https://github.com/lakekeeper/lakekeeper.git"
rust-version = "1.86.0"
license = "Apache-2.0"

[workspace.dependencies]
rdkafka = { git = "https://github.com/lakekeeper/rust-rdkafka.git", rev = "1ccd38d", default-features = false, features = [
    "tokio",
    "zstd",
    "gssapi-vendored",
    "curl-static",
    "ssl-vendored",
    "libz-static",
    "cmake-build",
] }
async-channel = { version = "2.3.1" }
async-nats = "0.42.0"
async-compression = { version = "^0.4", features = ["tokio", "gzip"] }
azure_core = { version = "0.21.0", default-features = false, features = [
    "hmac_rust",
    "enable_reqwest_rustls",
] }
azure_storage = { version = "0.21.0", default-features = false, features = [
    "enable_reqwest_rustls",
] }
azure_storage_blobs = { version = "0.21.0", default-features = false, features = [
    "enable_reqwest_rustls",
] }
azure_identity = { version = "0.21.0", default-features = false, features = [
    "enable_reqwest_rustls",
] }
azure_storage_datalake = { version = "0.21.0", default-features = false, features = [
    "enable_reqwest_rustls",
] }
aws-config = { version = "1.8.5", features = ["behavior-version-latest"] }
aws-sdk-sts = "1.82.0"
aws-smithy-http = "0.62.3"
aws-smithy-http-client = { version = "1.0.6" }
aws-smithy-runtime-api = { version = "1.8.7" }
aws-smithy-async = { version = "1.2.5" }
base64 = "0.22.1"
cloudevents-sdk = { version = "0.8.0" }
fxhash = "0.2.1"
google-cloud-auth = { package = "gcloud-auth", version = "1.1.0", features = [
    "rustls-tls",
    "external-account",
], default-features = false }
google-cloud-token = { package = "token-source", version = "1.0" }
gcloud-token = "1.0.0"
figment = { version = "^0.10", features = ["env"] }
figment_file_provider_adapter = "0.1.1"
serde = { version = "^1.0", features = ["rc"] }
serde_derive = "^1.0"
serde_with = "^3.4"
serde_json = { version = "^1.0", features = ["raw_value"] }
serde_yaml = "0.9.34"
quick-xml = "0.37.4"
url = { version = "^2.5", features = ["serde"] }
uuid = { version = "^1.6", features = ["serde", "v4", "v5", "v7"] }
reqwest = { version = "^0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
iceberg = { git = "https://github.com/lakekeeper/iceberg-rust.git", rev = "f4e1f87a42c75851000041a30db7a0096ae51f0b", features = [
    "storage-gcs",
    "storage-azdls",
    "storage-s3",
] }
iso8601 = "0.6.2"
bytes = "1.10"
openfga-client = { version = "0.3", features = ["auth-middle"] }
typed-builder = "^0.21.0"
async-trait = "0.1.83"
axum = { version = "0.8.1" }
axum-prometheus = { version = "0.8.0", features = ["http-listener"] }
axum-extra = { version = "0.10.0" }
axum-macros = { version = "0.5.0" }
itertools = "0.14.0"
mockall = "0.13.0"
needs_env_var = "1.1.0"
http = "^1.1"
derive_more = { version = "^2.0.0", features = ["from"] }
flate2 = "^1.0"
lazy_static = "^1.4"
futures = "^0.3"
anyhow = "^1.0"
chrono = "^0.4"
headers = { version = "^0.4" }
hostname = "0.4.0"
http-body-util = "^0.1"
jwks_client_rs = { version = "0.5.1", default-features = false, features = [
    "rustls-tls",
] }
lazy-regex = { version = "3.2.0", features = ["lite"] }
moka = { version = "^0.12", features = ["sync"] }
percent-encoding = "2.3.1"
strum = { version = "0.27.0", features = ["derive"] }
strum_macros = "0.27.0"
sqlx = { version = "0.8.5", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "json",
    "migrate",
    "uuid",
    "chrono",
] }
thiserror = "2.0.0"
tokio = { version = "1.41", default-features = false, features = [
    "signal",
    "rt-multi-thread",
] }
tokio-util = { version = "^0.7" }
tower = { version = "^0.5" }
tower-http = { version = "^0.6", features = [
    "catch-panic",
    "compression-full",
    "sensitive-headers",
    "timeout",
    "trace",
    "normalize-path",
] }
tracing = { version = "^0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tryhard = { version = "0.5.1" }
urlencoding = "^2.1"
async-stream = "0.3.6"
utoipa = { git = "https://github.com/lakekeeper/utoipa.git", rev = "bb1b59f01005ae3199d8a49e7395edcd538a935c", features = [
    "axum_extras",
    "chrono",
    "url",
    "uuid",
    "yaml",
] }
serde_yml = "0.0.12"
utoipa-swagger-ui = { git = "https://github.com/lakekeeper/utoipa.git", rev = "bb1b59f01005ae3199d8a49e7395edcd538a935c", features = [
    "axum",
] }
veil = "0.2.0"
paste = "1.0.15"
heck = "0.5.0"
time = "0.3.36"
pretty_assertions = "~1.4"
similar = "2.6.0"
assert-json-diff = "2.0.2"
maplit = "1.0.2"
limes = { version = "0.2.2", features = ["kubernetes", "axum", "rustls-tls"] }
middle = { version = "0.3", features = ["tonic"] }
fastrand = "2.3.0"

[profile.dev]
opt-level = 1
