[package]
name = "iceberg-catalog-bin"
resolver = "2"
version = "0.6.2"
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = """
This is Lakekeeper, a catalog for Iceberg tables.
"""

[[bin]]
name = "iceberg-catalog"
path = "src/main.rs"

[features]
default = []
all = ["ui"]
ui = ["dep:lakekeeper-console", "dep:mime_guess", "dep:moka"]

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
axum = { workspace = true }
clap = { version = "^4.5", features = ["derive"] }
iceberg-catalog = { path = "../iceberg-catalog", features = ["all"] }
lakekeeper-console = { git = "https://github.com/lakekeeper/console", rev = "7cd090a", optional = true }
limes = { workspace = true }
mime_guess = { version = "^2.0", optional = true }
moka = { version = "^0.12", optional = true, features = ["sync"] }
reqwest = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["cors", "tracing"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true, features = ['yaml'] }
