[package]
name = "iceberg-catalog-bin"
resolver = "2"
version = "0.8.5"
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = """
This is Lakekeeper, a catalog for Iceberg tables.
"""

[[bin]]
name = "iceberg-catalog"
path = "src/main.rs"

[features]
default = []
all = ["ui"]
ui = ["dep:lakekeeper-console"]

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { version = "^4.5", features = ["derive"] }
iceberg-catalog = { path = "../iceberg-catalog", features = ["all"] }
lakekeeper-console = { git = "https://github.com/lakekeeper/console", rev = "1db1909", optional = true }
limes = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["cors", "tracing"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true, features = ['yaml'] }
