[package]
name = "iceberg-catalog"
resolver = "2"
version = "0.4.3"
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = """
Lakekeeper is a rust-native Apache Iceberg REST Catalog implementation
"""

[features]
all = [
    "sqlx-postgres",
    "s3-signer",
    "router",
    "nats",
    "kafka",
    "vendored-protoc",
]
default = ["sqlx-postgres", "s3-signer", "router", "vendored-protoc"]
sqlx-postgres = ["sqlx"]
sqlx = ["dep:sqlx"]
s3-signer = ["dep:aws-sigv4", "dep:aws-credential-types"]
router = ["dep:tower-http"]
nats = ["dep:async-nats"]
kafka = ["dep:rdkafka"]
vendored-protoc = ["openfga-rs/vendored-protoc"]

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true, optional = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { version = "^1.2", optional = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-sts = { workspace = true }
aws-sigv4 = { version = "^1.2", optional = true }
aws-smithy-http = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
axum-prometheus = { workspace = true }
azure_core = { workspace = true }
azure_identity = { workspace = true }
azure_storage = { workspace = true }
azure_storage_blobs = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
cloudevents-sdk = { version = "0.7.0" }
derive_more = { workspace = true }
figment = { workspace = true }
figment_file_provider_adapter = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
google-cloud-auth = { workspace = true }
google-cloud-token = { workspace = true }
hostname = { workspace = true }
http = { workspace = true }
http-body-util = { version = "~0.1" }
iceberg = { workspace = true }
iceberg-ext = { path = "../iceberg-ext", features = ["axum"] }
itertools = { workspace = true }
jsonwebtoken = "9.3.0"
jwks_client_rs = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
lazy-regex = { workspace = true }
lazy_static = { workspace = true }
lru = { workspace = true }
maplit = { workspace = true }
openfga-rs = { workspace = true, optional = false }
paste = { workspace = true }
percent-encoding = { workspace = true }
rand = "0.8.5"
reqwest = { workspace = true }
rdkafka = { workspace = true, optional = true }
serde = { workspace = true }
serde-aux = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_yml = { workspace = true }
sqlx = { workspace = true, optional = true, features = ["tls-rustls"] }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, optional = true, features = [
    "default",
    "request-id",
    "util",
    "cors",
] }
tracing = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
utoipa = { workspace = true, features = ["uuid"] }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }
vaultrs = "0.7.2"
vaultrs-login = "0.2.1"
veil = { workspace = true }

[dev-dependencies]
assert-json-diff = { workspace = true }
figment = { workspace = true, features = ["test"] }
http-body-util = { workspace = true }
mockall = { workspace = true }
needs_env_var = { workspace = true }
pretty_assertions = { workspace = true }
serde_urlencoded = "0.7.1"
similar = { workspace = true }
tower = { workspace = true }
tracing-subscriber = { workspace = true }