[package]
name = "lakekeeper-bin"
resolver = "2"
version = "0.9.1"
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = """
This is Lakekeeper, a catalog for Iceberg tables.
"""

[[bin]]
name = "lakekeeper"
path = "src/main.rs"

[features]
default = []
all = ["ui"]
ui = ["dep:lakekeeper-console"]

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { version = "^4.5", features = ["derive"] }
lakekeeper = { path = "../lakekeeper", features = ["all"] }
lakekeeper-console = { git = "https://github.com/lakekeeper/console", rev = "v0.8.0", optional = true }
limes = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
