[package]
name = "lakekeeper-bin"
resolver = "2"
version = "0.9.3"
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = """
This is Lakekeeper, a catalog for Iceberg tables.
"""

[[bin]]
name = "lakekeeper"
path = "src/main.rs"

[features]
default = []
all = ["ui"]
ui = ["dep:lakekeeper-console", "dep:tower", "dep:tower-http", "dep:axum-extra"]

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true, optional = true }
clap = { version = "^4.5", features = ["derive"] }
lakekeeper = { path = "../lakekeeper", features = ["all"] }
lakekeeper-console = { git = "https://github.com/lakekeeper/console", rev = "v0.9.0", optional = true }
limes = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
